# map-coloring-course-project

./: README.md
glad/include/glad/: glad.h
opengl_test/include/GL/: glu.h
opengl_test/shaders/: fragment.glsl
opengl_test/src/: glad.c  main.c
report/: algorithms.md  design.md  dev_log.md  impovements.md  opengl_notes.md  report.draft.md  theory.md
source/: map.txt
source/include/: map_loader.h
source/include/glad/: glad.h
source/opengl_playground/: CMakeLists.txt
source/opengl_playground/src/: glad.c
source/src/: main.c  map_loader.c  practice_theory.md
